--- a/style.css
+++ b/style.css
@@ -501,6 +501,295 @@ nav a:hover {
     color: #464141b9;
 }
 
+/* HERO SECTION */
+.hero {
+    margin-top: 0px;
+    max-width: 1380px;
+    display: flex;
+    align-items: flex-start;
+    gap: 40px;
+    padding-top: 110px;
+    padding-bottom: 0;
+}
+
+.hero-text {
+    width: 60%;
+}
+
+.top-badge {
+    display: inline-block;
+    padding: 5px 8px;
+    border: 1px solid #ffd741;
+    background-color: #ffd64115;
+    border-radius: 6px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #977800;
+    margin-bottom: 20px;
+}
+
+.hero h1 {
+    font-size: 58px;
+    line-height: 1.1;
+    margin-bottom: 15px;
+    color: #222222;
+    font-weight: 600;
+}
+
+.hero p {
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    margin-bottom: 25px;
+    font-weight: 400;
+    line-height: 25px;
+    max-width: 620px;
+    color: #494242;
+}
+
+.hero-buttons {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.hero-wrapper {
+    width: 60%;
+    position: relative;
+    margin-top: 10px;
+}
+
+.hero-image {
+    width: 100%;
+    height: 420px;
+    background: #ffd741;
+    border-radius: 12px;
+    position: relative;
+    overflow: hidden;
+}
+
+/* SLIDES */
+.slide {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.8s ease-in-out;
+    transform: translateX(100%);
+}
+
+.slide.current {
+    transform: translateX(0);
+}
+
+.slide.next {
+    transform: translateX(100%);
+}
+
+/* ARROWS BASE */
+.arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 30px;
+    color: rgba(255, 215, 65, 0.95);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease;
+    cursor: pointer;
+}
+
+.hero-image:hover .arrow {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+
+.left-arrow {
+    left: 12px;
+}
+
+.right-arrow {
+    right: 12px;
+}
+
+/* DOT CONTAINER */
+.dots {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 25px;
+}
+
+/* DOT */
+.dot {
+    width: 30px;
+    height: 4px;
+    background: #c9b6783a;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background 0.2s ease, width 0.2s ease;
+}
+
+.dot.active {
+    background: rgb(237 211 109);
+}
+
+#slideText {
+    min-height: auto;
+    margin-top: 12px;
+}
+
+.rating {
+    max-width: 500px;
+    line-height: 25px;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    color: #494242;
+    overflow: hidden;
+}
+
+#slideText p,
+#review-text {
+    will-change: opacity, transform;
+}
+
+/* SLIDE TEXT */
+
+#slideText {
+    width: 100%;
+    opacity: 0;
+    transform: translateY(15px);
+    transition: opacity 0.6s cubic-bezier(0.25, 0.1, 0.25, 1),
+        transform 0.6s cubic-bezier(0.25, 0.1, 0.25, 1),
+        color 0.3s ease;
+    text-align: center;
+    font-family: "Inter", sans-serif;
+    font-size: 18px;
+    color: #464141b9;
+    font-weight: 500;
+    line-height: 1.5;
+}
+
+#slideText.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+#slideText:hover {
+    color: #ffd741;
+}
+
+
+/* RATING SECTION */
+.hero-extra {
+    margin-top: 20px;
+}
+
+@media (min-width: 1024px) {
+    .hero-extra {
+        margin-top: -180px;
+    }
+}
+
+
+.reviews {
+    display: flex;
+    align-items: center;
+    margin-left: 35px;
+    margin-bottom: 15px;
+    gap: 5px;
+}
+
+.reviews img {
+    width: 35px;
+    height: auto;
+    transition: all 0.2s;
+}
+
+.ret-p:hover {
+    transform: scale(1.15);
+}
+
+.reviews .star {
+    width: 16px;
+    height: auto;
+    margin-left: 8px;
+}
+
+.reviews span {
+    font-family: "Inter", sans-serif;
+    font-size: 15px;
+    font-weight: 600;
+    color: #5e5858ce;
+}
+
+.rating {
+    width: auto;
+    margin-left: 20px;
+    line-height: 25px;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    color: #494242;
+    overflow: hidden;
+}
+
+.reviews {
+    margin-top: 4px;
+}
+
+.rating {
+    margin-top: 8px;
+}
+
+
+.review-animate {
+    display: inline-block;
+    animation: slideUp 0.7s ease;
+}
+
+@keyframes slideUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+}
+
+.ret-p {
+    cursor: pointer;
+    transition: transform 0.2s, opacity 0.2s;
+}
+
+.ret-p.active {
+    transform: scale(1.15);
+    opacity: 1;
+}
+
+.ret-p:not(.active) {
+    opacity: 0.8;
+}
+
+
+.Available-on {
+    margin-top: 50px;
+    display: flex;
+    gap: 15px;
+}
+
+.Available-on h3 {
+    font-size: 20px;
+    margin-left: 20px;
+    font-weight: 550;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #464141b9;
+}
+
 @media (max-width: 768px) {
 
     .hero {
